'NFT Collection Section' Completed With Responsiveness

--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -152,7 +152,7 @@
     <!-- Latest NFT Section  -->
 
     <section class=" py-32 relative" >
-        <div class="h-full w-full absolute -left-[40%]" style="background: radial-gradient(circle, rgb(72, 9, 139) 0%,  rgba(22,14,42,1) 60%);">
+        <div class="h-full w-full absolute md:-left-[40%]" style="background: radial-gradient(circle, rgb(72, 9, 139) 0%,  rgba(22,14,42,1) 60%);">
 
         </div>
 
@@ -270,20 +270,20 @@
         </div>
 
         <!-- Col-2 -->
-        <div class="w-1/2 flex flex-col gap-y-10 justify-center px-10">
+        <div class="w-full md:w-1/2 flex flex-col gap-y-10 justify-center max-md:items-center px-10 max-md:mt-40">
 
             
-            <div class="w-fit relative -left-10 h-20 ">
+            <div class=" w-fit relative -left-10 h-20 ">
                 
-                <div class="h-20 w-20 rounded-full" style="background: linear-gradient(0deg, rgba(176,88,243,1) 0%, rgba(99,71,247,1) 100%);"></div>
+                <div class="h-20 w-20 rounded-full " style="background: linear-gradient(0deg, rgba(176,88,243,1) 0%, rgba(99,71,247,1) 100%);"></div>
 
                 <h1 class="text-gray-200 text-4xl text-center relative bottom-16 left-9">Latest NFT Collection</h1>
             </div>
 
-            <p class="text-[#627E7D] text-xl font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, eum sequi in nobis iure vel nesciunt suscipit, odit sint quam repellat veritatis quibusdam hic.</p>
+            <p class="text-[#627E7D] text-xl font-semibold max-md:text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, eum sequi in nobis iure vel nesciunt suscipit, odit sint quam repellat veritatis quibusdam hic.</p>
 
 
-            <button class="bg-[#1C1727] text-gray-200 border-transparent bg-transparent rounded-lg border-2 px-4 py-1 w-fit"  style="           
+            <button class="bg-[#1C1727] text-gray-200 border-transparent bg-transparent rounded-lg border-2 px-4 py-1 w-fit "  style="           
             background-image: linear-gradient(90deg, #1C1727, #1C1727),
             linear-gradient(120deg, rgba(63,167,242,1) 0%, rgba(168,49,253,1) 100%);
             background-clip: padding-box, border-box;
